--- a/#1/config.json
+++ b/#1/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Odcinkowy BOT",
-    "token": "NzE5NTQ1NzIxOTMzNTI5MTg0.Xt4_Ng.pANGCeRnoEN6ExlvPitiyFP30dU",
-    "prefix": "o!"
+    "name": "twoja-nazwa-bota (opcjonalna)",
+    "token": "twój-token",
+    "prefix": "twój-prefix"
 }
